--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ jobs:
     name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
     strategy:
       matrix:
-        otp: ['20.3', '21.3', '22.2']
-        elixir: ['1.8.2', '1.9.4']
+        otp: ['21.3', '22.3', '23.3']
+        elixir: ['1.10', '1.11', '1.12']
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
