--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
         mix local.hex --force
         mix deps.get
     - name: Run Tests
-      run: mix test --trace
+      run: mix coveralls.github
