ci: include gh token

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install Dependencies
       env:
         MIX_ENV: test
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         mix local.rebar --force
         mix local.hex --force
