--- a/.github/workflows/dialyzer.yml
+++ b/.github/workflows/dialyzer.yml
@@ -13,6 +13,12 @@ jobs:
           otp-version: "24"
           elixir-version: "1.12"
 
+      - name: Install Dependencies
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+
       - name: Restore PLT cache
         uses: actions/cache@v2
         id: plt_cache
