--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,6 @@ jobs:
           mix deps.get
 
       - name: Run Tests
-        run: mix coveralls.github
+        run: |
+          mix coveralls.github
+          bash <(curl -s https://codecov.io/bash)
