--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,29 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
+        id: beam
         with:
           otp-version: "24"
           elixir-version: "1.12"
 
+      - name: Restore Cached Dependencies
+        uses: actions/cache@v2
+        id: mix-cache
+        with:
+          path: |
+            deps
+            _build
+          key: ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-${{ hashFiles('mix.lock') }}
+
       - name: Install Dependencies
+        if: steps.mix-cache.outputs.cache-hit != 'true'
         run: |
           mix deps.get
+
+      - name: Check Codebase Standard
+        run: |
+          mix format --check-formatted
+          mix credo
 
       - name: Run Tests
         run: |
