--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
           otp-version: "25"
           elixir-version: "1.15"
 
+      - run: sudo apt-get install -y inotify-tools
+
       - name: Restore Cached Dependencies
         uses: actions/cache@v3
         id: mix-cache
